--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,3 +52,17 @@
     }
 }
 /* Navbar End */
+
+/* Popular section Start */
+#popular{
+    .card{
+        --bs-card-spacer-x: 0;
+        transition: .3s linear;
+
+        &:hover{
+            cursor: pointer;
+            box-shadow: 0px 0px 20px 5px rgb(182, 175, 175);
+        }
+    }
+}
+/* Popular section End */
